--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -64,6 +64,9 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+
+    /* some hack to stop the element from 'shaking' a bit to the top when the anmation ends */
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -71,6 +74,21 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+
+    /* 
+    how the animation will proceed; how fast or slow the specified parameters in keyframe will happend over time  
+    https://developer.mozilla.org/en-US/docs/Web/CSS/animation-timing-function
+    */
+    animation-timing-function: ease-out;
+
+    /* animation happens 3 times */
+    /* animation-iteration-count: 3; */
+
+    /* before animations starts to play, wait for 3 sec */
+    /* animation-delay: 3s; */
 }
 
 .heading-primary-sub {
@@ -78,4 +96,60 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+
+    /* shorthand for all the animation properties, the CSS will figure out which is what */
+    animation: moveInRight 1s ease-out;
+}
+
+/*
+    ANIMATIONS:
+    1) transition property, and change the properties that we want to animate
+*/
+
+@keyframes moveInLeft {
+    /* before the animation starts */
+    0% {
+        opacity: 0;
+        /* we want to be more on the left than in the beginning*/
+        transform: translateX(-100px) /*rotate(-50deg)*/;
+    }
+
+    /* 60% {
+        transform: rotate(180deg);
+    } */
+
+    /* in between */
+    80% {
+        /* move a little bit more to the right */
+        transform: translateX(10px);
+    }
+
+    /* when the animation finish */
+    100% {
+        opacity: 1;
+        /* in the exaclty place that is now in the document  */
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInRight {
+    /* before the animation starts */
+    0% {
+        opacity: 0;
+        /* we want to be more on the left than in the beginning*/
+        transform: translateX(100px);
+    }
+
+    /* in between */
+    80% {
+        /* move a little bit more to the right */
+        transform: translateX(-10px);
+    }
+
+    /* when the animation finish */
+    100% {
+        opacity: 1;
+        /* in the exaclty place that is now in the document  */
+        transform: translateX(0);
+    }
 }
