--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -158,6 +158,18 @@ body {
     }
 }
 
+@keyframes moveInButton {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 .btn:link,
 .btn:visited {
     display: inline-block;
@@ -166,6 +178,7 @@ body {
     padding: 15px 40px;
     border-radius: 100px;
     transition: all .2s; /* all the properties are enabled to be animated; transitions must be set on the initial states */
+    position: relative;
 }
 
 .btn:hover {
@@ -183,4 +196,33 @@ body {
 .btn-white {
     background-color: #fff;
     color: #777;
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+
+/* after element only when we hover the button */
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6); /* increase the element */
+    opacity: 0; /* fading out */
+}
+
+.btn-animated {
+    animation: moveInButton .5s ease-out .75s;
+    /* .75s for delay */
+    animation-fill-mode: backwards; /* applies the styles of the 0% before the animation starts */
 }
