--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -7,19 +7,33 @@ Dark green: #28b485
 
 */
 
-* {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit; /* good practice */
+}
+
+html {
+    font-size: 62.5%; 
+    /* 
+        1rem = 10px 
+        we want to set this, but if we set it to px, then when the user changes the size of the briwser, it will be exactly 10px
+        so we should set it to 100% to be exactly as the size of the viewport.
+        but to set 10px, we divide 10/16 = 62.5%
+    */
 }
 
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+
+    box-sizing: border-box;
 }
 
 .header {
@@ -41,12 +55,12 @@ body {
 
 .logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 
 .logo {
-    height: 35px; /* width is automatically figured out by the browser */
+    height: 3.5rem; /* width is automatically figured out by the browser */
 }
 
 .text-box {
@@ -69,14 +83,14 @@ body {
 
     /* some hack to stop the element from 'shaking' a bit to the top when the anmation ends */
     backface-visibility: hidden;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
 .heading-primary-main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     animation-name: moveInLeft;
     animation-duration: 1s;
@@ -96,9 +110,9 @@ body {
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.75rem;
 
     /* shorthand for all the animation properties, the CSS will figure out which is what */
     animation: moveInRight 1s ease-out;
@@ -115,7 +129,7 @@ body {
     0% {
         opacity: 0;
         /* we want to be more on the left than in the beginning*/
-        transform: translateX(-100px) /*rotate(-50deg)*/;
+        transform: translateX(-10rem) /*rotate(-50deg)*/;
     }
 
     /* 60% {
@@ -125,7 +139,7 @@ body {
     /* in between */
     80% {
         /* move a little bit more to the right */
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
 
     /* when the animation finish */
@@ -141,13 +155,13 @@ body {
     0% {
         opacity: 0;
         /* we want to be more on the left than in the beginning*/
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
 
     /* in between */
     80% {
         /* move a little bit more to the right */
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
 
     /* when the animation finish */
@@ -161,7 +175,7 @@ body {
 @keyframes moveInButton {
     0% {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
 
     100% {
@@ -175,22 +189,23 @@ body {
     display: inline-block;
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
-    border-radius: 100px;
+    padding: 1.5rem 4rem;
+    border-radius: 10rem;
     transition: all .2s; /* all the properties are enabled to be animated; transitions must be set on the initial states */
     position: relative;
+    font-size: 1.6rem;
 }
 
 .btn:hover {
     transform: translateY(-3px);
 
     /* x y blur color*/
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); 
 }
 
 .btn:active {
     transform: translateY(-1px); /* related to the initial state, not to the hover state */
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2); 
 }
 
 .btn-white {
@@ -203,7 +218,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
