--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -53,17 +53,17 @@ body {
     */
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
 
-.logo {
+.header__logo {
     height: 3.5rem; /* width is automatically figured out by the browser */
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
 
     /* these two are related to the parent element*/
@@ -86,7 +86,7 @@ body {
     margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -108,7 +108,7 @@ body {
     /* animation-delay: 3s; */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
@@ -208,7 +208,7 @@ body {
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2); 
 }
 
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: #777;
 }
@@ -226,7 +226,7 @@ body {
     transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: #fff;
 }
 
