--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -9,6 +9,8 @@ $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+// FONT
+$default-font-size: 1.6rem;
 
 // GRID
 $grid-width: 114rem;
