--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -18,3 +18,9 @@
         transform: skewY(7deg); // skew to the other direction so that the children will be unskewed
     }
 }
+
+.section-tours {
+    background-color: $color-gray-light-1;
+    padding: 25rem 0 50rem 0;
+    margin-top: -10rem;
+}
