style for front part of card

--- a/Natours/sass/components/_cards.scss
+++ b/Natours/sass/components/_cards.scss
@@ -1,15 +1,15 @@
 .card {
+    // FUNCTIONALITY
+
     // the card will move towards the user with this perpective property
     // the lower the value, the more dramatic will be the move
     perspective: 150rem;
     -moz-perspective: 150rem; // to work in mozilla
     position: relative;
-    height: 50rem; 
+    height: 52rem; 
 
     &__side {
-        color: white;
-        font-size: 2rem;
-        height: 50rem; 
+        height: 52rem; 
         transition: all .8s ease;
         width: 100%;
         position: absolute; // now the parent has a height of 0 => set the card the same height
@@ -17,6 +17,7 @@
         left: 0;
         backface-visibility: hidden; // hides the back part of an element
         border-radius: 3px;
+        overflow: hidden; // so the image will not overflow the card (and not loose the border-radius)
         box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
         &--front {
@@ -39,5 +40,66 @@
 
     &:hover &__side--back {
         transform: rotateY(0);
+    }
+
+    // FRONT SIDE STYLING
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen; // blend the backgound images if we have more than one
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); // so it will work on all browsers
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/nat-5.jpg);
+        }
+
+        &--2 {
+            background-image: url(../img/nat-5.jpg);
+        }
+
+        &--3 {
+            background-image: url(../img/nat-5.jpg);
+        }
+    }
+
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
+        width: 75%;
+    }
+
+    &__heading-span {
+        padding: 1rem 1.5rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone; // when span text will break into multiple lines, each line will be styled as an individual element (for e.g. the margins will be applied to the entire sub-box)
+        &--1 {
+            background-image: linear-gradient(to right bottom, rgba($color-secondary-light, 0.85),  rgba($color-secondary-dark, 0.85));
+        }
+    }
+
+    &__details {
+        padding: 3rem;
+        ul {
+            list-style: none;
+            width: 80%;
+            margin: 0 auto;
+            
+            li {
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+
+                &:not(:last-child) {
+                    border-bottom: 1px solid $color-gray-light-2;
+                }
+            }
+        }
     }
 }
