--- a/Natours/sass/layout/_header.scss
+++ b/Natours/sass/layout/_header.scss
@@ -6,6 +6,7 @@
     background-position: top; /* the top of the image stays the same as the image is redimensioned */
     position: relative;
 
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     /* 
         - starting from the left top corner, which is the first set of numbers, we want to stay in place => 0 0
