--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -44,10 +44,19 @@
     
     &--white {
         background-color: $color-white;
-        color: #777;
+        color: $color-gray-dark;
 
         &::after {
             background-color: $color-white;
+        }
+    }
+
+    &--green {
+        background-color: $color-primary-dark;
+        color: $color-white;
+
+        &::after {
+            background-color: $color-primary-dark;
         }
     }
 
