--- a/Natours/sass/components/_cards.scss
+++ b/Natours/sass/components/_cards.scss
@@ -30,6 +30,14 @@
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
+
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
         }
     }
     
@@ -55,11 +63,11 @@
         }
 
         &--2 {
-            background-image: url(../img/nat-5.jpg);
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../img/nat-6.jpg);
         }
 
         &--3 {
-            background-image: url(../img/nat-5.jpg);
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(../img/nat-7.jpg);
         }
     }
 
@@ -79,8 +87,17 @@
         padding: 1rem 1.5rem;
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone; // when span text will break into multiple lines, each line will be styled as an individual element (for e.g. the margins will be applied to the entire sub-box)
+        
         &--1 {
             background-image: linear-gradient(to right bottom, rgba($color-secondary-light, 0.85),  rgba($color-secondary-dark, 0.85));
+        }
+
+        &--2 {
+            background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.85),  rgba($color-primary-dark, 0.85));
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom, rgba($color-tertiary-light, 0.85),  rgba($color-tertiary-dark, 0.85));
         }
     }
 
