--- a/Natours/sass/components/_story.scss
+++ b/Natours/sass/components/_story.scss
@@ -16,6 +16,7 @@
     }
 
     &__shape {
+        position: relative;
         width: 15rem;
         height: 15rem;
         float: left; // in roder to make the rest of the content floar around it
@@ -38,5 +39,31 @@
 
     &__image {
         height: 100%;
+        transform: translateX(-4rem) scale(1.4); // in order the image to be centered in the circle
+        transition: all .5s;
+    }
+
+    &__caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        color: $color-white;
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity: 0;
+        transition: all .5s;
+        // backface-visibility: hidden; // i don't think this is needed anymore, the text is not shaking at the end of transition
+    }
+
+    &:hover &__caption {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+
+    &:hover &__image {
+        transform: translateX(-4rem) scale(1); 
+        filter: blur(3px) brightness(80%);
     }
 }
