--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -29,3 +29,33 @@
     position: relative;
     padding: 15rem 0;
 }
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+}
+
+.book {
+    // solid color gradient: adding another bg color on top of the image
+    // 105deg - 'inclanation' of the libne where the colors meet
+    // between 0% and 50% we want white
+    // from 50% we want transparent
+    background-image: linear-gradient(
+            105deg, 
+            rgba($color-white, .9) 0%,
+            rgba($color-white, .9) 50%,
+            transparent 50%
+        )
+        , url(../img/nat-10.jpg);
+    background-size: 100%; // the same as 'cover'
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+    height: 50rem;
+
+    &__form {
+        width: 50%;
+        padding: 6rem;
+    }
+
+}
