--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -432,7 +432,8 @@ body {
   border: 0;
   border-bottom: 3px solid transparent;
   width: 100%;
-  display: block; }
+  display: block;
+  transition: all .3s; }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
