--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -1,24 +1,25 @@
 // utility class: it has one simply goal, in this case to center the text
+// it is a good practice to use !important on utility classes
 .u-center-text {
-    text-align: center;
+    text-align: center !important;
 }
 
 .u-margin-bottom-small {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem !important;
 }
 
 .u-margin-bottom-medium {
-    margin-bottom: 4rem;
+    margin-bottom: 4rem !important;
 }
 
 .u-margin-bottom-big {
-    margin-bottom: 8rem;
+    margin-bottom: 8rem !important;
 }
 
 .u-margin-top-big {
-    margin-top: 8rem;
+    margin-top: 8rem !important;
 }
 
 .u-margin-top-huge {
-    margin-top: 10rem;
+    margin-top: 10rem !important;
 }
