--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         display: inline-block;
@@ -9,6 +10,10 @@
         transition: all .2s; /* all the properties are enabled to be animated; transitions must be set on the initial states */
         position: relative;
         font-size: $default-font-size;
+
+        // Changes for <button>
+        border: none;
+        cursor: pointer;
     }
     
     &:hover {
@@ -24,7 +29,9 @@
         }
     }
     
-    &:active {
+    &:active, 
+    &:focus {
+        outline: none;
         transform: translateY(-1px); /* related to the initial state, not to the hover state */
         box-shadow: 0 .5rem 1rem rgba($color-black, 0.2); 
     }
