--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -6,6 +6,9 @@
     top: 0;
     left: 0;
     z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
 
     &__content {
         width: 75%;
@@ -16,6 +19,10 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(.25); // we already have another transform coming from the mixin, which will be lost, so we have to specify it again
+        transition: all .4s .2s; // .2s for the delay, in order the background to appear first
     }
 
     &__left {
@@ -51,5 +58,41 @@
         -ms-hyphens: auto; 
         -webkit-hyphens: auto; 
         hyphens: auto; // in order to this to work, we must have set lang on html tag
+    }
+
+
+    // Open states
+    // applies to the element which is the target (set in href)
+    // we set the id of popup and then we specified the target in anchors href (#popup)
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    // when the popup becomes the target
+    // to get that 'coming towards' the user effect when popup opens
+    // first set the initial state for content
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    &__close {
+        &:link,
+        &:visited {
+            color: $color-gray-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all .2s;
+            line-height: 1; // because it inherits the 1.7 set on the body
+        }
+
+        &:hover {
+            color: $color-primary;
+        }
     }
 }
