--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -12,3 +12,36 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+// MEDIA QUERY MANAGER
+/*
+    6 - 600px:       Phone
+    600 - 900px:    Tablet portrait
+    9000 - 12000px: Tablet landscape
+    [1200 - 1800] is where our normal styles apply
+    18000px +:      Big desktop
+ 
+    $breakpoint arguments choices:
+    - phone
+    - tab-port
+    - tab-land
+    - big-desktop
+
+    Note: ems and rems in media queries are not affected by the root font-size setting, meaning that 1rem/em is always = to the font-size coming from the browser.
+    Fact: the em is always a good choice for media queries.
+    1em = 16px
+*/
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content }; // 600px
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content }; // 900px
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content }; // 1200px
+    }
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content }; // 1800px
+    }
+}
