--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -30,6 +30,8 @@
     Note: ems and rems in media queries are not affected by the root font-size setting, meaning that 1rem/em is always = to the font-size coming from the browser.
     Fact: the em is always a good choice for media queries.
     1em = 16px
+
+    Order: base + typography > general layout + grid > page layout > components
 */
 @mixin respond($breakpoint) {
     @if $breakpoint == phone {
