--- a/Natours/sass/base/_base.scss
+++ b/Natours/sass/base/_base.scss
@@ -19,7 +19,7 @@ html {
         font-size: 56.25%; // 1rem = 9px => 9/16 = 56.25%
     }
 
-    @include respond(tab-port) { // width < 900? -> this should be after the tab-land, beacuse when the screen is below 900, the lab-land will also be applied, and we want this to have prority 
+    @include respond(tab-port) { // width < 900? -> this should be after the tab-land, beacuse when the screen is below 900, the lab-land will also be applied, and we want this to have prority (fot the mobile-first approach will be the other way)
         font-size: 50%; // 1rem = 8px => 8/16 = 50%
     }
 
@@ -30,5 +30,9 @@ html {
 
 body {
     box-sizing: border-box;
-    position: relative;
+    padding: 3rem;
+
+    @include respond(tab-port) { 
+        padding: 0;
+    }
 }
