--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -8,9 +8,13 @@
         background-color: rgba($color-white, .5);
         border: 0;            
         border-bottom: 3px solid transparent; // so when focused will have the same height with the padding
-        width: 100%;
+        width: 90%;
         display: block;
         transition: all .3s; // to have a nice effect when focus changes
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
 
         &:focus {
             outline: none;
@@ -56,6 +60,11 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-label {
