--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -23,11 +23,21 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(.25); // we already have another transform coming from the mixin, which will be lost, so we have to specify it again
         transition: all .4s .2s; // .2s for the delay, in order the background to appear first
+
+        @include respond(tab-land) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &__left {
         width: 33.333333%;
         display: table-cell;
+
+        @include respond(tab-land) {
+            display: flex;
+            width: 100%;
+        }
     }
 
     &__right {
@@ -35,11 +45,23 @@
         display: table-cell; // to give both sides the same height
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-land) {
+            width: 100%;
+        }
+
+        @include respond(phone) {
+            padding: 1.5rem 3rem;
+        }
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(tab-land) {
+            width: 50%;
+        }
     }
 
     &__text {
@@ -58,6 +80,10 @@
         -ms-hyphens: auto; 
         -webkit-hyphens: auto; 
         hyphens: auto; // in order to this to work, we must have set lang on html tag
+
+        @include respond(phone) {
+            column-count: 1;
+        }
     }
 
 
